@@ -9,9 +9,9 @@ package org.dspace.app.deletionprocess;
 
 import static com.jayway.jsonpath.JsonPath.read;
 import static org.dspace.deletion.process.DSpaceObjectDeletionProcess.OBJECT_DELETION_SCRIPT;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
@@ -44,7 +44,8 @@ import org.dspace.content.RelationshipType;
 import org.dspace.content.service.ItemService;
 import org.dspace.deletion.process.DSpaceObjectDeletionProcess;
 import org.hamcrest.Matchers;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
 /**
@@ -68,6 +69,7 @@ public class DSpaceObjectDeletionProcessIT extends AbstractControllerIntegration
     @Autowired
     private ItemService itemService;
 
+    @BeforeEach
     @Override
     public void setUp() throws Exception {
         super.setUp();
@@ -413,7 +415,7 @@ public class DSpaceObjectDeletionProcessIT extends AbstractControllerIntegration
         deletionProcess.initialize(args, handler, admin);
         deletionProcess.run();
 
-        var message = String.format("DSpaceObject for provided identifier:%s doesn't exist!", bitstream1.getID());
+        var message = "DSpaceObject for provided identifier:%s doesn't exist!".formatted(bitstream1.getID());
         assertTrue(handler.getException().getMessage().contains(message));
 
         getClient(tokenAdmin).perform(get("/api/core/bitstreams/" + bitstream1.getID()))
@@ -487,7 +489,7 @@ public class DSpaceObjectDeletionProcessIT extends AbstractControllerIntegration
         deletionProcess.initialize(args, handler, admin);
         deletionProcess.run();
 
-        var expectedMessage = String.format("DSpaceObject for provided identifier:%s doesn't exist!", fakeUuid);
+        var expectedMessage = "DSpaceObject for provided identifier:%s doesn't exist!".formatted(fakeUuid);
         assertTrue(handler.getException().getMessage().contains(expectedMessage));
     }
 
@@ -566,8 +568,8 @@ public class DSpaceObjectDeletionProcessIT extends AbstractControllerIntegration
         List<MetadataValue> physicalAuthorMetadata = itemService.getMetadata(
             publicationItem, "dc", "contributor", "author", Item.ANY, false
         );
-        assertTrue("Publication should have NO physical dc.contributor.author metadata initially",
-                   physicalAuthorMetadata.isEmpty());
+        assertTrue(physicalAuthorMetadata.isEmpty(),
+                   "Publication should have NO physical dc.contributor.author metadata initially");
         context.restoreAuthSystemState();
 
         // Delete person item with -c all option
@@ -594,12 +596,12 @@ public class DSpaceObjectDeletionProcessIT extends AbstractControllerIntegration
         List<MetadataValue> physicalAuthorMetadataAfter = itemService.getMetadata(
             publicationItem, "dc", "contributor", "author", Item.ANY, false
         );
-        assertFalse("Publication should have physical dc.contributor.author metadata after deletion with -c all",
-                    physicalAuthorMetadataAfter.isEmpty());
-        assertEquals("Physical metadata should contain the copied author name", 1, physicalAuthorMetadataAfter.size());
+        assertFalse(physicalAuthorMetadataAfter.isEmpty(),
+                    "Publication should have physical dc.contributor.author metadata after deletion with -c all");
+        assertEquals(1, physicalAuthorMetadataAfter.size(), "Physical metadata should contain the copied author name");
         String authorValue = physicalAuthorMetadataAfter.get(0).getValue();
-        assertTrue("Author metadata should contain 'Smith'", authorValue.contains("Smith"));
-        assertTrue("Author metadata should contain 'John'", authorValue.contains("John"));
+        assertTrue(authorValue.contains("Smith"), "Author metadata should contain 'Smith'");
+        assertTrue(authorValue.contains("John"), "Author metadata should contain 'John'");
         context.restoreAuthSystemState();
     }
 
@@ -688,16 +690,16 @@ public class DSpaceObjectDeletionProcessIT extends AbstractControllerIntegration
         List<MetadataValue> personPhysicalMetadata = itemService.getMetadata(
             personItem, "relation", "isPublicationOfAuthor", null, Item.ANY, false
         );
-        assertTrue("Person should have NO physical relation.isPublicationOfAuthor metadata initially",
-                   personPhysicalMetadata.isEmpty());
+        assertTrue(personPhysicalMetadata.isEmpty(),
+                   "Person should have NO physical relation.isPublicationOfAuthor metadata initially");
 
         // Check that project has NO physical relation.isPublicationOfProject metadata
         projectItem = context.reloadEntity(projectItem);
         List<MetadataValue> projectPhysicalMetadata = itemService.getMetadata(
             projectItem, "relation", "isPublicationOfProject", null, Item.ANY, false
         );
-        assertTrue("Project should have NO physical relation.isPublicationOfProject metadata initially",
-                   projectPhysicalMetadata.isEmpty());
+        assertTrue(projectPhysicalMetadata.isEmpty(),
+                   "Project should have NO physical relation.isPublicationOfProject metadata initially");
         context.restoreAuthSystemState();
 
         // Delete publication item with -c configured option
@@ -719,22 +721,22 @@ public class DSpaceObjectDeletionProcessIT extends AbstractControllerIntegration
         List<MetadataValue> personPhysicalMetadataAfter = itemService.getMetadata(
             personItem, "relation", "isPublicationOfAuthor", null, Item.ANY, false
         );
-        assertFalse("Person should have physical relation.isPublicationOfAuthor metadata after deletion with " +
-                    "-c configured (copyToRight=true)",
-                    personPhysicalMetadataAfter.isEmpty());
-        assertEquals("Person should have one relation metadata value", 1, personPhysicalMetadataAfter.size());
-        assertEquals("Person metadata should reference the deleted publication UUID",
-                     publicationItem.getID().toString(),
-                     personPhysicalMetadataAfter.get(0).getValue());
+        assertFalse(personPhysicalMetadataAfter.isEmpty(),
+                    "Person should have physical relation.isPublicationOfAuthor metadata after deletion with " +
+                    "-c configured (copyToRight=true)");
+        assertEquals(1, personPhysicalMetadataAfter.size(), "Person should have one relation metadata value");
+        assertEquals(publicationItem.getID().toString(),
+                     personPhysicalMetadataAfter.get(0).getValue(),
+                     "Person metadata should reference the deleted publication UUID");
 
         // Check that project STILL HAS NO physical relation.isPublicationOfProject metadata (copyToRight=false)
         projectItem = context.reloadEntity(projectItem);
         List<MetadataValue> projectPhysicalMetadataAfter = itemService.getMetadata(
             projectItem, "relation", "isPublicationOfProject", null, Item.ANY, false
         );
-        assertTrue("Project should NOT have physical relation.isPublicationOfProject metadata after deletion " +
-                   "with -c configured (copyToRight=false)",
-                   projectPhysicalMetadataAfter.isEmpty());
+        assertTrue(projectPhysicalMetadataAfter.isEmpty(),
+                   "Project should NOT have physical relation.isPublicationOfProject metadata after deletion " +
+                   "with -c configured (copyToRight=false)");
         context.restoreAuthSystemState();
     }
 
@@ -837,24 +839,24 @@ public class DSpaceObjectDeletionProcessIT extends AbstractControllerIntegration
         List<MetadataValue> personPhysicalMetadata = itemService.getMetadata(
             personItem, "relation", "isPublicationOfAuthor", null, Item.ANY, false
         );
-        assertTrue("Person should have NO physical relation.isPublicationOfAuthor metadata initially",
-                   personPhysicalMetadata.isEmpty());
+        assertTrue(personPhysicalMetadata.isEmpty(),
+                   "Person should have NO physical relation.isPublicationOfAuthor metadata initially");
 
         // Check that project has NO physical relation.isPublicationOfProject metadata
         projectItem = context.reloadEntity(projectItem);
         List<MetadataValue> projectPhysicalMetadata = itemService.getMetadata(
             projectItem, "relation", "isPublicationOfProject", null, Item.ANY, false
         );
-        assertTrue("Project should have NO physical relation.isPublicationOfProject metadata initially",
-                   projectPhysicalMetadata.isEmpty());
+        assertTrue(projectPhysicalMetadata.isEmpty(),
+                   "Project should have NO physical relation.isPublicationOfProject metadata initially");
 
         // Check that orgUnit has NO physical relation.isPublicationOfOrgUnit metadata
         orgUnitItem = context.reloadEntity(orgUnitItem);
         List<MetadataValue> orgUnitPhysicalMetadata = itemService.getMetadata(
             orgUnitItem, "relation", "isPublicationOfOrgUnit", null, Item.ANY, false
         );
-        assertTrue("OrgUnit should have NO physical relation.isPublicationOfOrgUnit metadata initially",
-                   orgUnitPhysicalMetadata.isEmpty());
+        assertTrue(orgUnitPhysicalMetadata.isEmpty(),
+                   "OrgUnit should have NO physical relation.isPublicationOfOrgUnit metadata initially");
         context.restoreAuthSystemState();
 
         // Delete publication item with -c specifying only Person and OrgUnit relationship type IDs
@@ -878,35 +880,35 @@ public class DSpaceObjectDeletionProcessIT extends AbstractControllerIntegration
         List<MetadataValue> personPhysicalMetadataAfter = itemService.getMetadata(
             personItem, "relation", "isPublicationOfAuthor", null, Item.ANY, false
         );
-        assertFalse("Person should have physical relation.isPublicationOfAuthor metadata after deletion " +
-                    "with -c using its relationship type ID",
-                    personPhysicalMetadataAfter.isEmpty());
-        assertEquals("Person should have one relation metadata value", 1, personPhysicalMetadataAfter.size());
-        assertEquals("Person metadata should reference the deleted publication UUID",
-                     publicationItem.getID().toString(),
-                     personPhysicalMetadataAfter.get(0).getValue());
+        assertFalse(personPhysicalMetadataAfter.isEmpty(),
+                    "Person should have physical relation.isPublicationOfAuthor metadata after deletion " +
+                    "with -c using its relationship type ID");
+        assertEquals(1, personPhysicalMetadataAfter.size(), "Person should have one relation metadata value");
+        assertEquals(publicationItem.getID().toString(),
+                     personPhysicalMetadataAfter.get(0).getValue(),
+                     "Person metadata should reference the deleted publication UUID");
 
         // Check that orgUnit NOW HAS physical relation.isPublicationOfOrgUnit metadata (ID was specified)
         orgUnitItem = context.reloadEntity(orgUnitItem);
         List<MetadataValue> orgUnitPhysicalMetadataAfter = itemService.getMetadata(
             orgUnitItem, "relation", "isPublicationOfOrgUnit", null, Item.ANY, false
         );
-        assertFalse("OrgUnit should have physical relation.isPublicationOfOrgUnit metadata after deletion " +
-                    "with -c using its relationship type ID",
-                    orgUnitPhysicalMetadataAfter.isEmpty());
-        assertEquals("OrgUnit should have one relation metadata value", 1, orgUnitPhysicalMetadataAfter.size());
-        assertEquals("OrgUnit metadata should reference the deleted publication UUID",
-                     publicationItem.getID().toString(),
-                     orgUnitPhysicalMetadataAfter.get(0).getValue());
+        assertFalse(orgUnitPhysicalMetadataAfter.isEmpty(),
+                    "OrgUnit should have physical relation.isPublicationOfOrgUnit metadata after deletion " +
+                    "with -c using its relationship type ID");
+        assertEquals(1, orgUnitPhysicalMetadataAfter.size(), "OrgUnit should have one relation metadata value");
+        assertEquals(publicationItem.getID().toString(),
+                     orgUnitPhysicalMetadataAfter.get(0).getValue(),
+                     "OrgUnit metadata should reference the deleted publication UUID");
 
         // Check that project STILL HAS NO physical relation.isPublicationOfProject metadata (ID was NOT specified)
         projectItem = context.reloadEntity(projectItem);
         List<MetadataValue> projectPhysicalMetadataAfter = itemService.getMetadata(
             projectItem, "relation", "isPublicationOfProject", null, Item.ANY, false
         );
-        assertTrue("Project should NOT have physical relation.isPublicationOfProject metadata after deletion " +
-                   "because its relationship type ID was not included in -c parameter",
-                   projectPhysicalMetadataAfter.isEmpty());
+        assertTrue(projectPhysicalMetadataAfter.isEmpty(),
+                   "Project should NOT have physical relation.isPublicationOfProject metadata after deletion " +
+                   "because its relationship type ID was not included in -c parameter");
         context.restoreAuthSystemState();
     }
 
